JavaFX included in bundle now comes from Gradle

--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -38,6 +38,10 @@ startScripts {
     }
 }
 
+configurations {
+    javafxModules
+}
+
 dependencies {
     compile project(':core')
     compile 'com.gluonhq:ignite-guice:1.0.2'
@@ -52,6 +56,11 @@ dependencies {
     testCompile 'org.testfx:testfx-core:4.0.15-alpha'
 
     testRuntime 'org.testfx:openjfx-monocle:jdk-11+26'
+
+    javafxModules "org.openjfx:javafx-base:${javafx.version}:${javafx.platform.classifier}"
+    javafxModules "org.openjfx:javafx-graphics:${javafx.version}:${javafx.platform.classifier}"
+    javafxModules "org.openjfx:javafx-controls:${javafx.version}:${javafx.platform.classifier}"
+    javafxModules "org.openjfx:javafx-fxml:${javafx.version}:${javafx.platform.classifier}"
 }
 
 javafx {
@@ -79,4 +88,10 @@ task copyDependencies(type: Copy) {
     from configurations.runtime
     from jar
     into "${buildDir}/libraries"
+}
+
+task copyJavafxModules(type: Copy) {
+    from configurations.javafxModules
+    include "*${javafx.platform.classifier}.jar"
+    into "${buildDir}/javafx-modules"
 }
