--- a/build.gradle
+++ b/build.gradle
@@ -55,10 +55,8 @@ subprojects {
     }
 
     dependencies {
-        testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
-        testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.2'
-        testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
-        testCompile 'org.mockito:mockito-junit-jupiter:2.23.4'
+        testCompile 'org.junit.jupiter:junit-jupiter:5.4.0'
+        testCompile 'org.mockito:mockito-junit-jupiter:2.24.0'
         runtime 'ch.qos.logback:logback-classic:1.2.3'
     }
 
