Localised the remaining FXML

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -55,6 +55,72 @@ main.session.open=Choose 'Open' to load a saved session.
 main.window.unsaved=Unsaved Changes
 main.window.untitled=Untitled
 
+# Session
+
+session.button.unknown=Don't Know
+session.button.unknown.tip=I don't know this word (press x)
+session.button.known=Know
+session.button.known.tip=I know this word (press k)
+session.button.unseen.tip=Reset word (press r)
+session.button.note.tip=Add a note to this word (press n)
+
+# Filters: Main Dialogue
+
+filter.main.title=Choose the words you want to show
+filter.main.button.ok=Enable Filters
+filter.main.button.cancel=Cancel
+filter.main.prompt.minimum.letters=Minimum number of letters in a word:
+filter.main.prompt.minimum.occurrences=Minimum number of occurrences of a word:
+filter.main.prompt.capitals=Include words starting with a capital letter:
+filter.main.lists.title=Word lists to exclude:
+filter.main.lists.button.grid.tip=Add a text document or spreadsheet with words to exclude
+filter.main.lists.button.session.tip=Add a VocabHunter session file with words to exclude
+filter.main.lists.empty.title=Use the buttons above to add lists of words to exclude:
+filter.main.lists.empty.grid=Add a text document or spreadsheet with words to exclude
+filter.main.lists.empty.session=Add a VocabHunter session file with words to exclude
+
+# Filters: Grid (text document or spreadsheet)
+
+filter.grid.title=Choose the words to filter
+filter.grid.button.ok=Add Filter
+filter.grid.button.cancel=Cancel
+filter.grid.file.prompt=Words file: 
+filter.grid.file.button.change=Change file...
+filter.grid.error.empty=File doesn't contain any words 
+filter.grid.columns.prompt=Select columns to include: 
+filter.grid.words.count=Total words: 
+
+# Filters: Session
+
+filter.session.title=Choose the words to filter
+filter.session.button.ok=Add Filter
+filter.session.button.cancel=Cancel
+filter.session.file.prompt=Session file: 
+filter.session.file.button.change=Change file...
+filter.session.error.empty=File doesn't contain any words marked as known/unknown
+filter.session.column.type=Known / Unknown
+filter.session.column.word=Word
+filter.session.mode.prompt=Select the words to filter:
+filter.session.mode.known=Known words
+filter.session.mode.both=Known & unknown words
+filter.session.words.count=Total words: 
+
+# Progress
+
+progress.progress.chart=Progress
+progress.progress.marked=Marked as Known/Unknown
+progress.progress.unmarked=Unmarked
+progress.results.chart=Results
+progress.results.known=Marked as Known
+progress.results.unknown=Marked as Unknown
+progress.results.unmarked=Unmarked
+progress.results.filtered=Filtered
+
+# Word Note
+
+note.button.ok=Add Note
+note.button.cancel=Cancel
+
 # About dialogue
 
 about.licence=VocabHunter is Open Source Software,\npublished under the Apache Licence, Version 2.0.
