Internationalised the file and error dialogues

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -127,3 +127,34 @@ about.licence=VocabHunter is Open Source Software,\npublished under the Apache L
 about.version=VocabHunter Version: {0}.
 about.copyright=Copyright (c) 2015 - 2019 Adam Carroll.
 about.close=Close
+
+# Error dialogues
+
+error.details=Error details:
+error.session.open.details=Couldn''t open file ''{0}''
+error.session.open.title=Open File Error
+error.session.save.details=Couldn''t save file ''{0}''
+error.session.save.title=Save Session Error
+error.session.export.details=Couldn''t create export file ''{0}''
+error.session.export.title=Export Error
+
+# File dialogues
+
+file.new=Select File To Analyse
+file.open=Open
+file.save=Save
+file.export=Export Selection
+file.exclude=Open list of words to exclude
+
+file.type.all=All Files
+file.type.text=Text Files
+file.type.document=Documents
+file.type.any_text=Text Files
+file.type.pdf=PDF Files
+file.type.office=Office Documents
+file.type.ebook=EBooks
+file.type.session=VocabHunter Session Files
+file.type.spreadsheet=Spreadsheets
+
+file.modified=''{0}'' has been modified.  Do you want to save your changes?
+file.unsaved=Unsaved Changes
