Switched GUI test to use TestFX JUnit 5 support

--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 
     testCompile project(path: ':core', configuration: 'tests')
 
-    testCompile 'org.testfx:testfx-core:4.0.15-alpha'
+    testCompile 'org.testfx:testfx-junit5:4.0.15-alpha'
 
     testRuntime 'org.testfx:openjfx-monocle:jdk-11+26'
 }
