Internationalised the status action messages

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -158,3 +158,12 @@ file.type.spreadsheet=Spreadsheets
 
 file.modified=''{0}'' has been modified.  Do you want to save your changes?
 file.unsaved=Unsaved Changes
+
+# Status manager
+
+status.action.new=Start a new VocabHunter session
+status.action.open=Open a saved VocabHunter session
+status.action.save=Save the VocabHunter session
+status.action.export=Export the words marked as unknown
+status.action.exit=Exit VocabHunter
+status.action.about=About VocabHunter
