Internationalised status position handling

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -167,3 +167,6 @@ status.action.save=Save the VocabHunter session
 status.action.export=Export the words marked as unknown
 status.action.exit=Exit VocabHunter
 status.action.about=About VocabHunter
+status.marked.percentage={0,number,#}% of words marked
+status.position.edit.on=Word {0} of {1} {1,choice,0#words|1#word|1<words}{2,choice,0#|1# ({2} word hidden by filter)|1< ({2} words hidden by filter)}
+status.position.edit.off=Word {0} of {1} {1,choice,0#words|1#word|1<words} marked as unknown
