Internationalised the progress controller

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -115,6 +115,13 @@ progress.results.known=Marked as Known
 progress.results.unknown=Marked as Unknown
 progress.results.unmarked=Unmarked
 progress.results.filtered=Filtered
+progress.slice.marked=Marked as\nKnown/Unknown
+progress.slice.unmarked=Unmarked
+progress.slice.known=Marked as\nKnown
+progress.slice.unknown=Marked as\nUnknown
+progress.slice.filtered=Filtered
+progress.word.count={0} {0,choice,0#Words|1#Word|1<Words}
+progress.word.percentage={0,number,#}%
 
 # Word Note
 
