--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -64,6 +64,9 @@ session.button.known.tip=I know this word (press k)
 session.button.unseen.tip=Reset word (press r)
 session.button.note.tip=Add a note to this word (press n)
 
+session.tab.analysis=Text Analysis
+session.tab.progress=Progress Report
+
 # Filters: Main Dialogue
 
 filter.main.title=Choose the words you want to show
