Internationalised the word use count

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -64,6 +64,8 @@ session.button.known.tip=I know this word (press k)
 session.button.unseen.tip=Reset word (press r)
 session.button.note.tip=Add a note to this word (press n)
 
+session.word.uses=({0} {0,choice,0#uses|1#use|1<uses})
+
 session.tab.analysis=Text Analysis
 session.tab.progress=Progress Report
 
