--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -130,6 +130,7 @@ progress.word.percentage={0,number,#}%
 
 # Word Note
 
+note.title=Note for word: {0}
 note.button.ok=Add Note
 note.button.cancel=Cancel
 
