Internationalised the filter word count

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -93,7 +93,7 @@ filter.grid.file.prompt=Words file:
 filter.grid.file.button.change=Change file...
 filter.grid.error.empty=File doesn't contain any words 
 filter.grid.columns.prompt=Select columns to include: 
-filter.grid.words.count=Total words: 
+filter.grid.words.count={0,choice,0#Error: No words selected|0<Total words: {0}}
 
 # Filters: Session
 
