Internationalised filter grid column names

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -94,6 +94,7 @@ filter.grid.file.button.change=Change file...
 filter.grid.error.empty=File doesn't contain any words 
 filter.grid.columns.prompt=Select columns to include: 
 filter.grid.words.count={0,choice,0#Error: No words selected|0<Total words: {0}}
+filter.grid.column=Column {0}
 
 # Filters: Session
 
