Internationalised the filter window titles

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -86,6 +86,7 @@ filter.main.lists.empty.session=Add a VocabHunter session file with words to exc
 
 # Filters: Grid (text document or spreadsheet)
 
+filter.grid.window.title=Filter Using Word File
 filter.grid.title=Choose the words to filter
 filter.grid.button.ok=Add Filter
 filter.grid.button.cancel=Cancel
@@ -98,6 +99,7 @@ filter.grid.column=Column {0}
 
 # Filters: Session
 
+filter.session.window.title=Filter Using VocabHunter Session File
 filter.session.title=Choose the words to filter
 filter.session.button.ok=Add Filter
 filter.session.button.cancel=Cancel
