--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -84,6 +84,11 @@ filter.main.lists.empty.title=Use the buttons above to add lists of words to exc
 filter.main.lists.empty.grid=Add a text document or spreadsheet with words to exclude
 filter.main.lists.empty.session=Add a VocabHunter session file with words to exclude
 
+# Filters (General)
+
+filter.words.count={0,choice,0#Error: No words selected|0<Total words: {0}}
+filter.column=Column {0}
+
 # Filters: Grid (text document or spreadsheet)
 
 filter.grid.window.title=Filter Using Word File
@@ -94,8 +99,6 @@ filter.grid.file.prompt=Words file:
 filter.grid.file.button.change=Change file...
 filter.grid.error.empty=File doesn't contain any words 
 filter.grid.columns.prompt=Select columns to include: 
-filter.grid.words.count={0,choice,0#Error: No words selected|0<Total words: {0}}
-filter.grid.column=Column {0}
 
 # Filters: Session
 
