Internationalised the filter window title

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -86,6 +86,7 @@ filter.main.lists.empty.session=Add a VocabHunter session file with words to exc
 
 # Filters (General)
 
+filter.window.title=Word Filter Settings
 filter.words.count={0,choice,0#Error: No words selected|0<Total words: {0}}
 filter.column=Column {0}
 
