Internationalised Word Note window title

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -136,6 +136,7 @@ progress.word.percentage={0,number,#}%
 
 # Word Note
 
+note.window.title=Word Note
 note.title=Note for word: {0}
 note.button.ok=Add Note
 note.button.cancel=Cancel
