Internationalised filter errors

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -89,6 +89,9 @@ filter.main.lists.empty.session=Add a VocabHunter session file with words to exc
 filter.window.title=Word Filter Settings
 filter.words.count={0,choice,0#Error: No words selected|0<Total words: {0}}
 filter.column=Column {0}
+filter.error.title=Filter Error
+filter.error.all=The selected filters would hide all of the words.
+filter.error.disabled=The filters have been disabled.
 
 # Filters: Grid (text document or spreadsheet)
 
