Internationalised several tool tips

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -83,6 +83,8 @@ filter.main.lists.button.session.tip=Add a VocabHunter session file with words t
 filter.main.lists.empty.title=Use the buttons above to add lists of words to exclude:
 filter.main.lists.empty.grid=Add a text document or spreadsheet with words to exclude
 filter.main.lists.empty.session=Add a VocabHunter session file with words to exclude
+filter.main.lists.button.edit=View/change the filter file
+filter.main.lists.button.delete=Remove the filter file
 
 # Filters (General)
 
@@ -118,6 +120,8 @@ filter.session.column.word=Word
 filter.session.mode.prompt=Select the words to filter:
 filter.session.mode.known=Known words
 filter.session.mode.both=Known & unknown words
+filter.session.type.known.tip=Word marked as known
+filter.session.type.unknown.tip=Word marked as unknown
 
 # Progress
 
