Internationalised the searcher

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -69,6 +69,12 @@ session.word.uses=({0} {0,choice,0#uses|1#use|1<uses})
 session.tab.analysis=Text Analysis
 session.tab.progress=Progress Report
 
+# Search bar
+
+search.match.none=No matches
+search.match.selection.on={0} of {1} {1,choice,0#matches|1#match|1<matches}
+search.match.selection.off={0} {0,choice,0#matches|1#match|1<matches}
+
 # Filters: Main Dialogue
 
 filter.main.title=Choose the words you want to show
