--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -91,6 +91,9 @@ filter.main.lists.empty.grid=Add a text document or spreadsheet with words to ex
 filter.main.lists.empty.session=Add a VocabHunter session file with words to exclude
 filter.main.lists.button.edit=View/change the filter file
 filter.main.lists.button.delete=Remove the filter file
+filter.main.lists.type.known=Known words
+filter.main.lists.type.both=Known & unknown words
+filter.main.lists.type.list=Word list
 
 # Filters (General)
 
