Added I18N support for unsaved changes dialogue buttons

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -196,6 +196,10 @@ file.type.spreadsheet=Spreadsheets
 file.modified=''{0}'' has been modified.  Do you want to save your changes?
 file.unsaved=Unsaved Changes
 
+file.button.save=Save
+file.button.discard=Discard
+file.button.cancel=Cancel
+
 # Status manager
 
 status.action.new=Start a new VocabHunter session
