Added menu items for changing the language

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -22,9 +22,11 @@ main.menu.words.edit.off=Show Selection
 main.menu.words.export=Export Selection...
 main.menu.words.find=Find
 
-main.menu.filters=Filters
-main.menu.filters.setup=Setup Filters...
-main.menu.filters.enable=Enable Filters
+main.menu.settings=Settings
+main.menu.settings.filters.setup=Setup Filters...
+main.menu.settings.filters.enable=Enable Filters
+main.menu.language.english=English
+main.menu.language.spanish=Spanish
 
 main.menu.help=Help
 main.menu.help.website=VocabHunter Website
