Moved language selection to a sub-menu

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -25,6 +25,7 @@ main.menu.words.find=Find
 main.menu.settings=Settings
 main.menu.settings.filters.setup=Setup Filters...
 main.menu.settings.filters.enable=Enable Filters
+main.menu.language.menu=Language
 main.menu.language.english=English
 main.menu.language.spanish=Spanish
 
