--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -212,5 +212,5 @@ status.action.export=Export the words marked as unknown
 status.action.exit=Exit VocabHunter
 status.action.about=About VocabHunter
 status.marked.percentage={0,number,#}% of words marked
-status.position.edit.on=Word {0} of {1} {1,choice,0#words|1#word|1<words}{2,choice,0#|1# ({2} word hidden by filter)|1< ({2} words hidden by filter)}
-status.position.edit.off=Word {0} of {1} {1,choice,0#words|1#word|1<words} marked as unknown
+status.position.edit.on=Word {0} of {1}{2,choice,0#|1# ({2} word hidden by filter)|1< ({2} words hidden by filter)}
+status.position.edit.off=Word {0} of {1} marked as unknown
