--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -19,7 +19,8 @@ main.menu.file.exit=Exit VocabHunter
 main.menu.words=Words
 main.menu.words.edit.on=Select Words
 main.menu.words.edit.off=Show Selection
-main.menu.words.export=Export Selection...
+main.menu.words.export.notes.on=Export Selection...
+main.menu.words.export.notes.off=Export Selection Without Notes...
 main.menu.words.find=Find
 
 main.menu.settings=Settings
