Created the language selection dialogue

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -215,3 +215,8 @@ status.action.about=About VocabHunter
 status.marked.percentage={0,number,#}% of words marked
 status.position.edit.on=Word {0} of {1}{2,choice,0#|1# ({2} word hidden by filter)|1< ({2} words hidden by filter)}
 status.position.edit.off=Word {0} of {1} marked as unknown
+
+# Language selection dialogue
+
+language.name=English
+language.title=Choose Your Language
