Internationalised the website selection

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -218,3 +218,9 @@ status.position.edit.off=Word {0} of {1} marked as unknown
 
 language.name=English
 language.title=Choose Your Language
+
+# Links
+
+link.main=https://vocabhunter.github.io/
+link.help=https://vocabhunter.github.io/help/
+link.issue=https://vocabhunter.github.io/issues/
