--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'commons-io:commons-io:2.6'
     compile 'org.apache.tika:tika-parsers:1.23'
     compile 'org.slf4j:slf4j-api:1.7.30'
+    compile 'org.slf4j:jul-to-slf4j:1.7.30'
     compile 'com.github.spotbugs:spotbugs-annotations:3.1.12'
     compile 'javax.inject:javax.inject:1'
 }
