Added feature to copy current word

--- a/gui/src/main/resources/bundles/VocabHunterBundle.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle.properties
@@ -21,6 +21,7 @@ main.menu.words.edit.on=Select Words
 main.menu.words.edit.off=Show Selection
 main.menu.words.export.notes.on=Export Selection...
 main.menu.words.export.notes.off=Export Selection Without Notes...
+main.menu.words.copy=Copy Word
 main.menu.words.find=Find
 
 main.menu.settings=Settings
