--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,19 +2,6 @@
  * Open Source Software published under the Apache Licence, Version 2.0.
  */
 
-task testJar(type: Jar, dependsOn: testClasses) {
-    baseName = "test-${project.archivesBaseName}"
-    from sourceSets.test.output
-}
-
-configurations {
-    tests
-}
-
-artifacts {
-    tests testJar
-}
-
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.11'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
@@ -24,4 +11,6 @@ dependencies {
     compile 'org.slf4j:jul-to-slf4j:1.7.30'
     compile 'com.github.spotbugs:spotbugs-annotations:4.2.1'
     compile 'javax.inject:javax.inject:1'
+
+    testCompile project(':test-utils')
 }
