--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     // This is required for the conditional logic in the logback setup
     runtime 'org.codehaus.janino:janino:3.1.3'
 
-    testCompile project(path: ':core', configuration: 'tests')
+    testCompile project(':test-utils')
 
     testCompile 'org.testfx:testfx-junit5:4.0.16-alpha'
 
