Switched to new Gradle dependency configurations

--- a/command-line/build.gradle
+++ b/command-line/build.gradle
@@ -3,7 +3,7 @@
  */
 
 dependencies {
-    compile project(':core')
+    implementation project(':core')
 
-    compile 'com.beust:jcommander:1.80'
+    implementation 'com.beust:jcommander:1.80'
 }
