--- a/build.gradle
+++ b/build.gradle
@@ -55,9 +55,9 @@ subprojects {
     }
 
     dependencies {
-        testCompile 'org.junit.jupiter:junit-jupiter:5.7.1'
-        testCompile 'org.mockito:mockito-junit-jupiter:3.8.0'
-        runtime 'ch.qos.logback:logback-classic:1.2.3'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+        testImplementation 'org.mockito:mockito-junit-jupiter:3.8.0'
+        runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
     }
 
     test {
