--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,15 +2,20 @@
  * Open Source Software published under the Apache Licence, Version 2.0.
  */
 
-dependencies {
-    compile 'org.apache.commons:commons-lang3:3.11'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
-    compile 'commons-io:commons-io:2.8.0'
-    compile 'org.apache.tika:tika-parsers:1.25'
-    compile 'org.slf4j:slf4j-api:1.7.30'
-    compile 'org.slf4j:jul-to-slf4j:1.7.30'
-    compile 'com.github.spotbugs:spotbugs-annotations:4.2.1'
-    compile 'javax.inject:javax.inject:1'
+plugins {
+    id 'java-library'
+}
 
-    testCompile project(':test-utils')
+dependencies {
+    api 'org.apache.commons:commons-lang3:3.11'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
+    api 'org.slf4j:slf4j-api:1.7.30'
+    api 'org.slf4j:jul-to-slf4j:1.7.30'
+
+    implementation 'commons-io:commons-io:2.8.0'
+    implementation 'org.apache.tika:tika-parsers:1.25'
+    implementation 'com.github.spotbugs:spotbugs-annotations:4.2.1'
+    implementation 'javax.inject:javax.inject:1'
+
+    testImplementation project(':test-utils')
 }
