--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -39,22 +39,23 @@ startScripts {
 }
 
 dependencies {
-    compile project(':core')
-    compile ('com.gluonhq:ignite-guice:1.0.2') {
+    implementation project(':core')
+    implementation ('com.gluonhq:ignite-guice:1.0.2') {
         exclude group: 'com.google.inject', module: 'guice'
     }
-    compile 'com.google.inject:guice:5.0.1'
-    compile 'org.controlsfx:controlsfx:11.1.0'
-    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
+    implementation 'com.google.inject:guice:5.0.1'
+    implementation 'org.controlsfx:controlsfx:11.1.0'
+    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
 
     // This is required for the conditional logic in the logback setup
-    runtime 'org.codehaus.janino:janino:3.1.3'
+    runtimeOnly 'org.codehaus.janino:janino:3.1.3'
 
-    testCompile project(':test-utils')
+    testImplementation project(':test-utils')
 
-    testCompile 'org.testfx:testfx-junit5:4.0.16-alpha'
+    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
 
-    testRuntime 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
+    testRuntimeOnly 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
 }
 
 javafx {
@@ -74,13 +75,14 @@ test {
 }
 
 task copyDependencies(type: Copy) {
-    from configurations.runtime
+    from configurations.runtimeClasspath
     from jar
+    exclude "javafx-*.jar"
     into "${buildDir}/libraries"
 }
 
 task copyJavafxModules(type: Copy) {
     from configurations.runtimeClasspath
-    include "javafx*${javafx.platform.classifier}.jar"
+    include "javafx-*${javafx.platform.classifier}.jar"
     into "${buildDir}/javafx-modules"
 }
