--- a/test-utils/build.gradle
+++ b/test-utils/build.gradle
@@ -3,9 +3,9 @@
  */
 
 dependencies {
-    compile project(':core')
-    compile 'com.github.spotbugs:spotbugs-annotations:4.2.1'
-    compile 'org.junit.jupiter:junit-jupiter:5.7.1'
-    compile 'org.apache.commons:commons-lang3:3.11'
-    compile 'commons-io:commons-io:2.8.0'
+    implementation project(':core')
+    implementation 'com.github.spotbugs:spotbugs-annotations:4.2.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    implementation 'org.apache.commons:commons-lang3:3.11'
+    implementation 'commons-io:commons-io:2.8.0'
 }
