--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ wrapper {
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
@@ -51,7 +51,7 @@ subprojects {
     targetCompatibility = 11
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
