--- a/package/build.gradle
+++ b/package/build.gradle
@@ -14,7 +14,7 @@ ext {
     fileAssociations = file("${buildDir}/resources/main/file-associations.properties")
     extraBundlerArguments = []
     if (operatingSystem.isMacOsX()) {
-        packageType = 'pkg'
+        packageType = 'dmg'
         appIcon = file('icons/mac/VocabHunter.icns')
         sessionIcon = file('icons/mac/VocabHunterSession.icns')
         extraBundlerArguments = ['--mac-sign']
@@ -23,6 +23,7 @@ ext {
         appIcon = file('icons/App1024.png')
         sessionIcon = file('icons/Doc1024.png')
     } else if (operatingSystem.isWindows()) {
+        packageType = 'exe'
         appIcon = file('icons/windows/VocabHunter.ico')
         sessionIcon = file('icons/windows/VocabHunterSession.ico')
         bundlerScript = file('bin/build-package.bat')
@@ -35,7 +36,7 @@ ext {
         windowsDllVCRUNTIME140 = file("${windowsDllDirectory}/VCRUNTIME140.dll")
     }
     if (publishedVersion.endsWith('-SNAPSHOT')) {
-        publishedVersion = '0.0.1'
+        publishedVersion = '1.0.0'
     }
 }
 
@@ -79,14 +80,10 @@ task checkBundlingEnvironment {
 
             if (javaHome) {
                 def javaExecutable = file("${javaHome}/bin/java.exe")
-                def packagerFile = file("${javaHome}/bin/jpackager.exe")
                 def jmodFile = file("${javaHome}/jmods/jdk.packager.jar")
 
                 if (!javaExecutable.exists()) {
                     throw new GradleException("Unable to find Java executable '${javaExecutable}'")
-                }
-                if (!packagerFile.exists()) {
-                    throw new GradleException("Unable to find Java packager executable at '${packagerFile}'")
                 }
                 if (!jmodFile.exists()) {
                     throw new GradleException("Unable to find Java packager module at '${jmodFile}'")
@@ -98,16 +95,6 @@ task checkBundlingEnvironment {
             } else {
                 throw new GradleException("JAVA_HOME must be set")
             }
-        } else {
-            if (project.hasProperty('javaPackagerPath')) {
-                def packagerFile = file("${javaPackagerPath}/jpackager")
-
-                if (!packagerFile.exists() || !packagerFile.isFile()) {
-                    throw new GradleException("The Java Packager '$packagerFile' is missing")
-                }
-            } else {
-                throw new GradleException("Use -PjavaPackagerPath=... to specify the directory containing the Java Packager")
-            }
         }
     }
 }
@@ -117,6 +104,7 @@ task createBundle(type: Exec, dependsOn: [processResources, checkBundlingEnviron
     if (operatingSystem.isWindows()) {
         commandLine 'cmd', '/c',
             bundlerScript,
+            packageType,
             "${javafxModulePath}",
             applicationLibraryPath,
             bundlePath,
@@ -126,7 +114,7 @@ task createBundle(type: Exec, dependsOn: [processResources, checkBundlingEnviron
     } else {
         commandLine = ['sh',
             bundlerScript,
-           "${-> file("${javaPackagerPath}/jpackager")}",
+            "jpackage",
             packageType,
             "${javafxModulePath}",
             applicationLibraryPath,
