Added file associations into the windows bundling

--- a/package/build.gradle
+++ b/package/build.gradle
@@ -76,6 +76,7 @@ task createBundle(type: Exec, dependsOn: [processResources]) {
             bundlePath,
             mainJar,
             publishedVersion,
+            fileAssociations,
             appIcon
     } else {
         commandLine = ['sh',
