Added inputs and outputs to the create bundle task

--- a/package/build.gradle
+++ b/package/build.gradle
@@ -67,6 +67,10 @@ processResources {
 
 task createBundle(type: Exec, dependsOn: [processResources]) {
     description 'Build the installable bundle'
+    inputs.dir("bin")
+    inputs.dir("icons")
+    inputs.file(fileAssociations)
+    outputs.dir(bundlePath)
     if (operatingSystem.isWindows()) {
         commandLine 'cmd', '/c',
             bundlerScript,
