--- a/package/src/main/resources/file-associations.properties
+++ b/package/src/main/resources/file-associations.properties
@@ -2,5 +2,5 @@
 
 extension=wordy
 mime-type=application/x-vnd.VocabHunterSession
-icon=${vocabhunterSessionIcon}
+icon=${vocabHunterSessionIcon}
 description=VocabHunter Session
