--- a/gui/src/main/resources/properties/build-info.properties
+++ b/gui/src/main/resources/properties/build-info.properties
@@ -2,5 +2,5 @@
 # Open Source Software published under the Apache Licence, Version 2.0.
 #
 
-version = @build.version@
-timestamp = @build.timestamp@
+version = ${buildVersion}
+timestamp = ${buildTimestamp}
