Fixed problem with module list on Windows

--- a/package/build.gradle
+++ b/package/build.gradle
@@ -84,7 +84,7 @@ task createBundle(type: Exec, dependsOn: [processResources, ':gui:copyDependenci
             publishedVersion,
             fileAssociations,
             appIcon,
-            modules
+            "\"${modules}\""
     } else {
         commandLine = ['sh',
             bundlerScript,
