--- a/package/build.gradle
+++ b/package/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 /*
  * Open Source Software published under the Apache Licence, Version 2.0.
  */
@@ -12,30 +10,27 @@ ext {
     mainJar = project(':gui').jar.outputs.files[0].name
     bundlePath = file("${buildDir}/bundle")
     fileAssociations = file("${buildDir}/resources/main/file-associations.properties")
+    modules = 'javafx.controls,javafx.fxml,java.naming,java.sql'
     extraBundlerArguments = []
     if (operatingSystem.isMacOsX()) {
-        packageType = 'pkg'
+        packageType = 'dmg'
         appIcon = file('icons/mac/VocabHunter.icns')
         sessionIcon = file('icons/mac/VocabHunterSession.icns')
-        extraBundlerArguments = ['--mac-sign']
+        if (!project.hasProperty("unsigned")) {
+            extraBundlerArguments = ['--mac-sign']
+        }
     } else if (operatingSystem.isLinux()) {
         packageType = 'deb'
         appIcon = file('icons/App1024.png')
         sessionIcon = file('icons/Doc1024.png')
     } else if (operatingSystem.isWindows()) {
+        packageType = 'exe'
         appIcon = file('icons/windows/VocabHunter.ico')
-        sessionIcon = file('icons/windows/VocabHunterSession.ico')
+        sessionIcon = file('icons/windows/VocabHunterSession.ico').toString().replace("\\", "\\\\")
         bundlerScript = file('bin/build-package.bat')
-        generatedInnoSetupFile = file("${buildDir}/resources/main/application.iss")
-        windowsExecutable = file("${bundlePath}/VocabHunter/VocabHunter.exe")
-        bundleContent = file("${bundlePath}/VocabHunter/*")
-        // Locations for the DLL workaround
-        windowsDllDirectory = file('C:\\Windows\\System32')
-        windowsDllMSVCP140 = file("${windowsDllDirectory}/MSVCP140.dll")
-        windowsDllVCRUNTIME140 = file("${windowsDllDirectory}/VCRUNTIME140.dll")
     }
     if (publishedVersion.endsWith('-SNAPSHOT')) {
-        publishedVersion = '0.0.1'
+        publishedVersion = '1.0.0'
     }
 }
 
@@ -64,69 +59,23 @@ task recreateIcons(dependsOn: [recreateIconMacApp, recreateIconMacSession, recre
 }
 
 processResources {
-    filesMatching('file-associations.properties') {
-        filter ReplaceTokens, tokens: [
-            'vocabhunter.session.icon': sessionIcon.toString()
-        ]
-    }
+    expand(vocabHunterSessionIcon: sessionIcon)
 }
 
-task checkBundlingEnvironment {
-    description 'Check the environment for building the installable bundle'
-    doLast {
-        if (operatingSystem.isWindows()) {
-            def javaHome = System.env.JAVA_HOME
-
-            if (javaHome) {
-                def javaExecutable = file("${javaHome}/bin/java.exe")
-                def packagerFile = file("${javaHome}/bin/jpackager.exe")
-                def jmodFile = file("${javaHome}/jmods/jdk.packager.jar")
-
-                if (!javaExecutable.exists()) {
-                    throw new GradleException("Unable to find Java executable '${javaExecutable}'")
-                }
-                if (!packagerFile.exists()) {
-                    throw new GradleException("Unable to find Java packager executable at '${packagerFile}'")
-                }
-                if (!jmodFile.exists()) {
-                    throw new GradleException("Unable to find Java packager module at '${jmodFile}'")
-                }
-                // Check existence of files for DLL workaround
-                if (!windowsDllMSVCP140.exists() || !windowsDllVCRUNTIME140.exists()) {
-                    throw new GradleException("Unable to find '${windowsDllMSVCP140}' and '${windowsDllVCRUNTIME140}'")
-                }
-            } else {
-                throw new GradleException("JAVA_HOME must be set")
-            }
-        } else {
-            if (project.hasProperty('javaPackagerPath')) {
-                def packagerFile = file("${javaPackagerPath}/jpackager")
-
-                if (!packagerFile.exists() || !packagerFile.isFile()) {
-                    throw new GradleException("The Java Packager '$packagerFile' is missing")
-                }
-            } else {
-                throw new GradleException("Use -PjavaPackagerPath=... to specify the directory containing the Java Packager")
-            }
-        }
+task createBundle(type: Exec, dependsOn: [processResources, ':gui:copyDependencies', ':gui:copyJavafxModules']) {
+    doFirst {
+        delete bundlePath
     }
-}
-
-task createBundle(type: Exec, dependsOn: [processResources, checkBundlingEnvironment]) {
     description 'Build the installable bundle'
+    inputs.dir("bin")
+    inputs.dir("icons")
+    inputs.file(fileAssociations)
+    inputs.dir(javafxModulePath)
+    inputs.dir(applicationLibraryPath)
+    outputs.dir(bundlePath)
     if (operatingSystem.isWindows()) {
         commandLine 'cmd', '/c',
             bundlerScript,
-            "${javafxModulePath}",
-            applicationLibraryPath,
-            bundlePath,
-            mainJar,
-            publishedVersion,
-            appIcon
-    } else {
-        commandLine = ['sh',
-            bundlerScript,
-           "${-> file("${javaPackagerPath}/jpackager")}",
             packageType,
             "${javafxModulePath}",
             applicationLibraryPath,
@@ -135,39 +84,19 @@ task createBundle(type: Exec, dependsOn: [processResources, checkBundlingEnviron
             publishedVersion,
             fileAssociations,
             appIcon,
+            "\"${modules}\""
+    } else {
+        commandLine = ['sh',
+            bundlerScript,
+            packageType,
+            "${javafxModulePath}",
+            applicationLibraryPath,
+            bundlePath,
+            mainJar,
+            publishedVersion,
+            fileAssociations,
+            appIcon,
+            modules,
             *extraBundlerArguments]
     }
-}
-
-createBundle.dependsOn ':gui:copyDependencies', ':gui:copyJavafxModules'
-
-if (operatingSystem.isWindows()) {
-    processResources {
-        filesMatching('application.iss') {
-            filter ReplaceTokens, tokens: [
-                'bundle.version': publishedVersion,
-                'executable.location': windowsExecutable.toString(),
-                'bundle.content': bundleContent.toString()
-            ]
-        }
-    }
-
-    task completeInnoSetup(dependsOn: processResources) {
-        doLast {
-            copy {
-                from 'icons/windows'
-                into "${bundlePath}/VocabHunter"
-                include 'VocabHunterSession.ico'
-            }
-            // Copy files for DLL workaround
-            copy {
-                from windowsDllMSVCP140
-                from windowsDllVCRUNTIME140
-                into "${bundlePath}/VocabHunter"
-            }
-            println("Inno Setup file: ${generatedInnoSetupFile}")
-        }
-    }
-
-    createBundle.finalizedBy completeInnoSetup
 }
