--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ allprojects {
 
 wrapper {
     description 'Setup the Gradle wrapper'
-    gradleVersion = '7.0.2'
+    gradleVersion = '7.1'
     distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
 
@@ -82,7 +82,7 @@ subprojects {
 
     jacocoTestReport {
         reports {
-            xml.enabled true
+            xml.required = true
             xml.destination file("${buildDir}/reports/jacoco/report.xml")
         }
     }
