--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,7 +13,8 @@ dependencies {
     api 'org.slf4j:jul-to-slf4j:1.7.32'
 
     implementation 'commons-io:commons-io:2.11.0'
-    implementation 'org.apache.tika:tika-parsers:1.26'
+    implementation 'org.apache.tika:tika-core:2.1.0'
+    implementation 'org.apache.tika:tika-parsers-standard-package:2.1.0'
     implementation 'com.github.spotbugs:spotbugs-annotations:4.2.3'
     implementation 'javax.inject:javax.inject:1'
 
