Replaced deprecated Jacoco configuration

--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ subprojects {
     jacocoTestReport {
         reports {
             xml.required = true
-            xml.destination file("${buildDir}/reports/jacoco/report.xml")
+            xml.outputLocation = file("${buildDir}/reports/jacoco/report.xml")
         }
     }
 
